The page shortcuts are no longer shown on super small screens in which they tend to overlap with the menus

--- a/src/media/stylesheets/app.css
+++ b/src/media/stylesheets/app.css
@@ -298,7 +298,7 @@ body.dark .verse-container.highlighted {
 .page-shortcut {
   height: 50%;
   width: 32px;
-  display: block;
+  display: none;
   position: fixed;
   opacity: 0.4; }
 
@@ -321,6 +321,9 @@ body.dark .verse-container.highlighted {
   border-top-left-radius: 1em;
   border-bottom-left-radius: 1em; }
 
+@media screen and (min-width: 321px) {
+  .page-shortcut {
+    display: block; } }
 .view_read_work .speaker {
   font-weight: bold;
   display: block;
